# hello-world

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
data/: HelloWorld.conf
src/: Main.cpp
