# binaries to compile
bin_PROGRAMS = bin/hello-world

# hellow world sources
bin_hello_world_SOURCES = src/Main.cpp

# package data example


# documentation
dist_doc_DATA = README.md LICENSE data/HelloWorld.txt
dist_pkgdata_DATA = data/HelloWorld.conf
nobase_dist_pkgdata_DATA = data/HelloWorld2.conf
