# init autoconf
AC_INIT( [hello-world], [0.1] )

# init automake
#		foreign - do not require standard files
#		subdir-objs - put the .o files in the subdirectories
AM_INIT_AUTOMAKE( [foreign subdir-objects] )

# check for c++ compiler
AC_PROG_CXX

# make the make file
AC_CONFIG_FILES( [Makefile] )

# create the files
AC_OUTPUT